# models/Category.model.js
@@ -4,7 +4,8 @@ const Module = require("./Module.model");
 
 const categorySchema = new Schema(
   {
-    name: { type: String, required: true },
+    name_hindi: { type: String, required: true },
+    name_english: { type: String, required: true },
     img: { type: String, required: false },
     module: [{ type: mongoose.Schema.Types.ObjectId, ref: "Module" }],
   },
