# models/Question.model.js
@@ -5,18 +5,22 @@ const Module = require("./Module.model");
 
 const questionSchema = new Schema(
   {
-    question: { type: String, required: true },
-    answer: { type: String, required: true },
+    question_hindi: { type: String, required: true },
+    answer_hindi: { type: String, required: true },
+    question_english: { type: String, required: true },
+    answer_english: { type: String, required: true },
     category: {
       type: String,
       enum: ["easy", "medium", "hard"],
       required: true,
     },
-    description: { type: String, required: false },
+    description_hindi: { type: String, required: false },
+    description_english: { type: String, required: false },
     img: { type: String, required: false },
     module: { type: mongoose.Schema.Types.ObjectId, ref: "Module" },
     chapter: { type: mongoose.Schema.Types.ObjectId, ref: "Chapter" },
-    option: [{ type: String, required: false }],
+    option_hindi: [{ type: String, required: false }],
+    option_english: [{ type: String, required: false }],
   },
   { versionKey: false }
 );
